[gd_scene load_steps=8 format=3 uid="uid://bji1trcj62fwf"]

[ext_resource type="StyleBox" uid="uid://pgvf28664moo" path="res://resources/menu_buttons/pressed_style.tres" id="1_aktha"]
[ext_resource type="Script" uid="uid://p77fc73b2emf" path="res://scripts/pause_manager.gd" id="1_koxkd"]
[ext_resource type="StyleBox" uid="uid://oypipmf341vs" path="res://resources/menu_buttons/normal_style.tres" id="2_8x80a"]

[sub_resource type="Gradient" id="Gradient_g4ivv"]
offsets = PackedFloat32Array(0, 0.156566, 0.99495, 1)
colors = PackedColorArray(0, 0, 0, 0.870588, 0, 0, 0, 0.870588, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_aktha"]
gradient = SubResource("Gradient_g4ivv")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
repeat = 1

[sub_resource type="LabelSettings" id="LabelSettings_g4ivv"]
font_size = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8x80a"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_koxkd")

[node name="PauseScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PauseScreen"]
modulate = Color(1, 1, 1, 0.603922)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_aktha")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="Label" type="Label" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_g4ivv")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_8x80a")

[node name="ContinueBtn" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = ExtResource("2_8x80a")
theme_override_styles/hover = ExtResource("2_8x80a")
theme_override_styles/pressed = ExtResource("1_aktha")
theme_override_styles/normal = ExtResource("2_8x80a")
text = "Continue"

[node name="QuitBtn" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = ExtResource("2_8x80a")
theme_override_styles/hover = ExtResource("2_8x80a")
theme_override_styles/pressed = ExtResource("1_aktha")
theme_override_styles/normal = ExtResource("2_8x80a")
text = "Exit to Menu"

[connection signal="pressed" from="PauseScreen/VBoxContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="PauseScreen/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
